# counsel-of-ricks

./: .env.example  .gitignore  README.md  SPEC.md  depo_prep_prd.md  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  scrape_transcripts.py
.beads/: config.yaml  issues.jsonl
app/: __init__.py  config.py  main.py
docker/: docker-compose.yml  init.sql
frontend/: index.html  package.json  tailwind.config.js  tsconfig.tsbuildinfo
migrations/: 001_add_witness_profiles.sql  003_create_migrations_tracker.sql
scripts/: find_bad_pdfs.py  generate_password_hash.py  ingest.py  migrate.py
sql/: ghost-bootstrap.sql
transcripts/: A_Rick_in_King_Morturs_Mort.txt  A_Rick_in_King_Morturs_Mort_.txt  A_Rickconvenient_Mort.txt  A_Rickle_in_Time.txt  Air_Force_Wong.txt  Alien_Covenant_Rick_and_Morty.txt  Amortycan_Grickfitti.txt  Analyze_Piss.txt  Anatomy_Park_episode.txt  Auto_Erotic_Assimilation.txt  Bethic_Twinstinct.txt  Big_Trouble_in_Little_Sanchez.txt  Childrick_of_Mort.txt  Claw_and_Hoarder_Special_Ricktims_Morty.txt  Close_Rick-Counters_of_the_Rick_Kind.txt  Cryo_Mort_a_Rickver.txt  Edge_of_Tomorty_Rick_Die_Rickpeat.txt  Fear_No_Mort.txt  Final_DeSmithation.txt  Final_DeSmithation_.txt  Forgetting_Sarick_Mortshall.txt  Full_Meta_Jackrick.txt  Get_Schwifty_episode.txt  Girl_Who_Manipulates_Time.txt  Gotron_Jerrysis_Rickvangelion.txt  Hot_Rick.txt  How_Poopy_Got_His_Poop_Back.txt  Interdimensional_Cable_2_Tempting_Fate.txt  JuRicksic_Mort.txt  Lawnmower_Dog.txt  Look_Whos_Purging_Now.txt  M._Night_Shaym-Aliens.txt  Mort_Dinner_Rick_Andre.txt  Morty_Daddy.txt  (+51 more)
(+72 files in other folders)
